--- a/filtereddns.html
+++ b/filtereddns.html
@@ -55,14 +55,14 @@
     <link rel="dns-prefetch" href="wikipedia.org">
     <link rel="dns-prefetch" href="support.mozilla.org">
     <link rel="dns-prefetch" href="developer.apple.com">
-    <link rel="prefetch" href="/aboutsainternet.html" as="document">
-    <link rel="prerender" href="/aboutsainternet.html">
     <link rel="prefetch" href="/frequentlyaskedquestions.html" as="document">
     <link rel="prerender" href="/frequentlyaskedquestions.html">
     <link rel="prefetch" href="/connecttosainternet.html" as="document">
     <link rel="prerender" href="/connecttosainternet.html">
     <link rel="prefetch" href="/portsandprotocols.html" as="document">
     <link rel="prerender" href="/portsandprotocols.html">
+    <link rel="prefetch" href="/technologies.html" as="document">
+    <link rel="prerender" href="/technologies.html">
     <link rel="prefetch" href="/testsainternet.html" as="document">
     <link rel="prerender" href="/testsainternet.html">
   </head>
@@ -87,10 +87,10 @@
           <a class="mdl-navigation__link" href="/index.html">Home</a>
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
-          <a class="mdl-navigation__link" href="/aboutsainternet.html"> - About Filtered DNS</a>
           <a class="mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
           <a class="mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="mdl-navigation__link" href="/technologies.html"> - Technologies</a>
           <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="mdl-navigation__link" href="/projects.html">Projects</a>
@@ -123,7 +123,7 @@
                 Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
               </p>
               <p>
-                You can find information about the technologies powering Sainternet Filtered DNS <a href="/aboutsainternet.html">here</a>.
+                You can find information about the technologies powering Sainternet Filtered DNS <a href="/technologies.html">here</a>.
               </p>
           </div>
         </div>
