--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://code.getmdl.io">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-red.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-red.min.css">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/button_home.css">
@@ -73,16 +73,16 @@
           <a class="mdl-navigation__link" href="/index.html">Home</a>
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="/aboutsainternet.html"> - About Filtered DNS</a>
           <a class="mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
           <a class="mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="#portsandprotocols"> <b>- Ports and Protocols</b></a>
+          <a class="mdl-navigation__link" href="/technologies.html"> - Technologies</a>
           <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="mdl-navigation__link" href="/projects.html">Projects</a>
         </nav>
       </div>
-      <div class="green-ribbon"></div>
+      <div class="light_green-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
