--- a/technologies.html
+++ b/technologies.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - aboutsainternet.html
+  sainternet.xyz - technologies.html
   Copyright 2022 saint-lascivious (Hayden Pearce). All rights reserved.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -35,7 +35,7 @@
     <link rel="icon" sizes="any" href="/favicon.ico">
 
     <!-- SEO -->
-    <link rel="canonical" href="https://sainternet.xyz/aboutsainternet.html">
+    <link rel="canonical" href="https://sainternet.xyz/technologies.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
     <!-- Styles -->
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://code.getmdl.io">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.amber-red.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-red.min.css">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/button_home.css">
@@ -72,16 +72,16 @@
           <a class="mdl-navigation__link" href="/index.html">Home</a>
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="#aboutsainternet"> <b>- About Filtered DNS</b></a>
           <a class="mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
           <a class="mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="mdl-navigation__link" href="#technologies"> <b>- Technologies</b></a>
           <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="mdl-navigation__link" href="/projects.html">Projects</a>
         </nav>
       </div>
-      <div class="amber-ribbon"></div>
+      <div class="green-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -94,7 +94,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="aboutsainternet"><span class="embiggen">About Sainternet</span></h3>
+            <h3 id="technologies"><span class="embiggen">Technologies</span></h3>
               <p>
                 Sainternet Filtered DNS is made possible using, but neither endorsed nor condoned by, the following projects.
               </p>
