--- a/testsainternet.html
+++ b/testsainternet.html
@@ -73,10 +73,10 @@
           <a class="mdl-navigation__link" href="/index.html">Home</a>
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="/aboutsainternet.html"> - About Filtered DNS</a>
           <a class="mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
           <a class="mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="mdl-navigation__link" href="/technologies.html"> - Technologies</a>
           <a class="mdl-navigation__link" href="#testsainternet"> <b>- Test Sainternet</b></a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="mdl-navigation__link" href="/projects.html">Projects</a>
