saint-lascivious.github.io: projects -> popular projects
 - plus various wiggling around of project title texts
   (adding spaces to allow line breaks in long project names)

Changes to be committed:
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -64,7 +64,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="#pokedexoverdns"><b>Pokédex over DNS</b></a>
-            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+            <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
@@ -75,7 +75,7 @@
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="#pokedexoverdns"><b>Pokédex over DNS</b></a>
-          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+          <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="indigo-ribbon"></div>
