--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -63,7 +63,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+            <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
@@ -79,7 +79,7 @@
           <a class="mdl-navigation__link" href="/technologies.html"> - Technologies</a>
           <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+          <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="light_green-ribbon"></div>
