--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="#projects"><b>Projects</b></a>
+            <a class="mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
           </nav>
         </div>
       </header>
@@ -73,7 +73,7 @@
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="#projects"><b>Projects</b></a>
+          <a class="mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
         </nav>
       </div>
       <div class="purple-ribbon"></div>
@@ -82,23 +82,23 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Projects</b></a><br><a href="#dnsproxy-config">dnsproxy-config</a>, <a href="#haha_cache_go_brrr">haha_cache_go_brrr</a>, <a href="#munin-pihole-plugins">munin-pihole-plugins</a>, <a href="#saint-lascivious_github_io">saint-lascivious.github.io</a>, <a href="#unbound-config">unbound-config</a>
+              <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Popular Projects</b></a><br><a href="#dnsproxy-config">dnsproxy config</a>, <a href="#haha_cache_go_brrr">haha cache go brrr</a>, <a href="#munin-pihole-plugins">munin pihole plugins</a>, <a href="#saint-lascivious_github_io">sainternet.xyz</a>, <a href="#unbound-config">unbound config</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="projects"><icon class="fa-brands fa-github"></icon> <span class="embiggen">Popular GitHub Projects</span></h3>
+            <h3 id="projects"><span class="embiggen">Popular Projects</span></h3>
               <p>
-                This page lists some of my more popular GitHub repositories.
+                This page lists some of my more popular projects on GitHub.
               </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="dnsproxy-config"><span class="embiggen">dnsproxy-config</span></h3>
+            <h3 id="dnsproxy-config"><span class="embiggen">dnsproxy config</span></h3>
               <p>
                 <a href="https://github.com/saint-lascivious/dnsproxy-config">dnsproxy-config</a>
               </p>
@@ -113,7 +113,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="haha_cache_go_brrr"><span class="embiggen">haha_cache_go_brrr</span></h3>
+            <h3 id="haha_cache_go_brrr"><span class="embiggen">haha cache go brrr</span></h3>
               <p>
                 <a href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
               </p>
@@ -125,7 +125,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="munin-pihole-plugins"><span class="embiggen">munin-pihole-plugins</span></h3>
+            <h3 id="munin-pihole-plugins"><span class="embiggen">munin pihole plugins</span></h3>
               <p>
                 <a href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
               </p>
@@ -137,7 +137,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="saint-lascivious_github_io"><span class="embiggen">saint-lascivious.github.io</span></h3>
+            <h3 id="saint-lascivious_github_io"><span class="embiggen">sainternet.xyz</span></h3>
               <p>
                 <a href="https://github.com/saint-lascivious/saint-lascivious.github.io">saint-lascivious.github.io</a>
               </p>
@@ -156,7 +156,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="unbound-config"><span class="embiggen">unbound-config</span></h3>
+            <h3 id="unbound-config"><span class="embiggen">unbound config</span></h3>
               <p>
                 <a href="https://github.com/pi-hole/FTL">unbound-config</a>
               </p>
