--- a/technologies.html
+++ b/technologies.html
@@ -62,7 +62,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+            <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
@@ -78,7 +78,7 @@
           <a class="mdl-navigation__link" href="#technologies"> <b>- Technologies</b></a>
           <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+          <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="green-ribbon"></div>
