--- a/filtereddns.html
+++ b/filtereddns.html
@@ -77,7 +77,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+            <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
@@ -93,7 +93,7 @@
           <a class="mdl-navigation__link" href="/technologies.html"> - Technologies</a>
           <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+          <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="orange-ribbon"></div>
