--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -63,7 +63,7 @@
             <a class="mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+            <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
@@ -74,7 +74,7 @@
           <a class="mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+          <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="deep_orange-ribbon"></div>
