saint-lascivious.github.io: additional favicons/icons
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - new file:   resources/icons/android-chrome-265-192x192.png
 - new file:   resources/icons/android-chrome-265-256x256.png
 - new file:   resources/icons/android-chrome-404-192x192.png
 - new file:   resources/icons/android-chrome-404-256x256.png
 - new file:   resources/icons/favicon-265-16x16.png
 - new file:   resources/icons/favicon-265-32x32.png
 - new file:   resources/icons/favicon-265-48x48.png
 - new file:   resources/icons/favicon-265.ico
 - new file:   resources/icons/favicon-404-16x16.png
 - new file:   resources/icons/favicon-404-32x32.png
 - new file:   resources/icons/favicon-404-48x48.png
 - new file:   resources/icons/favicon-404.ico
 - new file:   resources/icons/favicon-48x48.png
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/265.html
+++ b/265.html
@@ -26,13 +26,14 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-256-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-256-192x192.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="/resources/icons/favicon-256-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-256-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-256-16x16.png">
+    <link rel="icon" sizes="any" href="/resources/icons/favicon-256.ico">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/265.html">
