--- a/404.html
+++ b/404.html
@@ -26,13 +26,14 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-404-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-404-192x192.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="/resources/icons/favicon-404-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-404-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-404-16x16.png">
+    <link rel="icon" sizes="any" href="/resources/icons/favicon-404.ico">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/404.html">
