--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -30,6 +30,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-192x192.png">
 
     <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="48x48" href="/resources/icons/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
     <link rel="icon" sizes="any" href="/favicon.ico">
