saint-lascivious.github.io: make table slightly more material-ish
 - use mdl 500/400 greys in table
 - minor edits to ports and protocols table values

Changes to be committed:
 - modified:   portsandprotocols.html
 - modified:   resources/stylesheets/table.css

--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -118,7 +118,7 @@
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                  <td>119.224.127.171<br>::ffff:119.224.127.171</td>
+                  <td>119.224.127.171<br><b>::ffff:119.224.127.171</b><br>::ffff:77e0:7fab</td>
                   <td>TCP 53</td>
                 </tr>
                 <tr>
@@ -128,13 +128,13 @@
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                  <td>119.224.127.171<br>::ffff:119.224.127.171</td>
+                  <td>119.224.127.171<br><b>::ffff:119.224.127.171</b><br>::ffff:77e0:7fab</td>
                   <td>UDP 53</td>
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
                   <td>dns.sainternet.xyz</td>
-                  <td>UDP 784<br>UDP 853<br>UDP 8853</td>
+                  <td>UDP 784<br><b>UDP 853</b><br>UDP 8853</td>
                 </tr>
               </table>
            </div>
